Complete Dockerize